added dark mode, and language. (finished for submission)

--- a/src/app/styles/Thread.css
+++ b/src/app/styles/Thread.css
@@ -9,7 +9,8 @@
 }
 
 .thread-comment-modal .comment-modal-container {
-  grid-template-columns: 1fr 18fr 2fr;
+  grid-template-columns: 1fr 18fr 1fr;
+  grid-template-rows: max-content min-content min-content 5fr min-content min-content min-content;
   grid-template-areas:
     "owner-photo author posting-time"
     "line title title"
